Update cloud database configuration